<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCaloriesApp</string>
    <string name="action_settings">Settings</string>
    <string name="weight_view">Change weight:</string>
    <string name="calories_view">Calories consumed:  </string>    
    <string name="final_view">Total (kCal)</string>    
    <string name="final_edit">0</string>
    <string name="calories_edit">0</string>
    <string name="weight_edit">0</string>    
	<string name="meal_text_view">MEAL</string>  
    <string name="banana_text_view">Banana</string>
    <string name="egg_text_view">Egg</string>
    <string name="apple_text_view">Apple</string>    
    <string name="totalt_text_view">Total consumed(kCal):</string>
    <string name="totalt_edit_text">0</string>
    <string name="time_text_view">TIME:</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>    
    <string name="day_text_view">DAILY ACTIVITIES</string>    
	<string-array name="daily">
	    <item>Choose your activity</item>
        <item>Cleaning</item>
        <item>Shopping</item>
        <item>Gardening</item>
    </string-array>

</resources>
