<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
      <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue" 
            android:padding="5dp" >

            <EditText
                android:id="@+id/weightEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:ems="2"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="@string/weight_edit" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/weghtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/weight_view" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:progress="10" />
        </TableRow>
    
        
          <TextView
            android:id="@+id/dailyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/day_text_view"
             android:padding="5dp" />

        <Spinner
            android:id="@+id/dailySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:entries="@array/daily" />
        
         <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/meal_text_view"
            android:textSize="16sp"
            android:background="@color/blue"/>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"                
        android:background="@color/blue">

            <CheckBox
                android:id="@+id/appleCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/apple_text_view" 
                android:layout_weight="1"
                />

            <CheckBox
                android:id="@+id/bananaCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/banana_text_view" 
                android:layout_weight="1"
                />

            <CheckBox
                android:id="@+id/eggCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/egg_text_view"
                android:layout_weight="1"
                 />

        </TableRow>

      
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/caloriesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_view" />

         <EditText
            android:id="@+id/caloriesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:singleLine="true"   
            android:inputType="numberDecimal"
            android:background="@color/white" />

    </TableRow>
        
         <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black" 
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalt_text_view"
            android:textColor="@color/white"
            android:textSize="@dimen/size"
            android:gravity="center_horizontal" 
            android:padding="5dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/totalt_edit_text" 
            android:textColor="@color/white"            
            android:singleLine="true"             
        android:background="@color/black"
            android:textSize="@dimen/size"/>

    </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="10dp">

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text_view" />

            <Chronometer
                android:id="@+id/timChronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chronometer" />
        
             </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/startButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_chronometer_button"
                 />

            <Button
                android:id="@+id/pauseButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pause_chronometer_button" />

            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_chronometer_button" />

        </TableRow>

</TableLayout>



